Release 1.5.111+130 with calendar and family contact
